
This release focus on providing the option to generate a device report. This is
a document that summarizes all settings for a connected device. The report is
generated in both PDF and JSON format. The PDF format is the primary format and
has some novel formatting and graphics to make it easier to get a quick overview 
of all the setting specified in the device. See the manual for examples.


Detailed user visible changes
-----------------------------

 - Added command ".report [file]" to generate a report

 - Added a new report section in the configuration file to control aspects
   of the report layout

-  Updated documentation with details about 


Bugs fixed
----------

 - The "phone" command did not allow the specification of report method and 
   VIP number.

 - The documentation for "phone" and "mswitch" command was wrong

 - The "gfen" command did not properly handle the enable/disable setting

 - The "gfevt" had the wrong number of arguments defined

 - abs() was used in gpsdist when it should have been fabs()



Internal changes (visible for developers and packagers)
-------------------------------------------------------

 - New dependency "libharu" (called "libhpdf-dev" in Ubunto/debian). 
   This is a generic PDF creation library.

 - Several new files that deals with the creation of the PDF device report
   They are divided between the view and model together with a supporting
   report utility library to make it easier to produce a table based report.

 - Added a module to manipulate associative arrays



v3.2.0 (may 2015)
========================

General notes for this release
------------------------------

This is a major feature release which increases functionality, stability and 
fine-tunes existing functionality in a number of areas. The details of the 
release can be found below. As a summary the highlights are: 

1. Option to include two static miniature maps with different zoom factors in 