@@ -30,7 +30,7 @@
             <year>2013-2015</year>
             <holder>Johan Persson</holder>
         </copyright>
-        <releaseinfo>Manual RA15 (For daemon v3.2.0)</releaseinfo>
+        <releaseinfo>Manual RA16 (For daemon v3.3.0)</releaseinfo>
     </info>
  
 <?hard-pagebreak?>
