@@ -114,7 +114,7 @@
     <para>Johan Persson</para>
     <para>@ <emphasis role="italic">N 59.655070, E 14.867005</emphasis></para>
     <para>August 2014</para>
-    <para><emphasis role="italic">(Third printing may 2015)</emphasis></para>
+    <para><emphasis role="italic">(Fourth printing October 2015)</emphasis></para>
     <para> </para>
     <section>
         <title>Acknowledgement</title>
